# adventofcode2021

./: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
