[package]
name = "common"
version = "0.1.0"
authors = ["Iiro Sulopuisto <iiro.sulopuisto@vainu.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
itertools = "0.10"
log = "0.4"
structopt = "0.3"
thiserror = "1.0"
